Reduced paddings, fixed bug in placeholders seen on iphone

--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  padding: 144px 0 120px;
+  padding: 80px 0;
   background-color: $bg-pink;
   background-image: url("../img/bg-header@1x.jpg");
   background-size: cover;
