--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -2,7 +2,6 @@
   @include placeholder {
     font-family: "Fregat", Arial, sans-serif;
     font-size: 16px;
-    line-height: 60px;
     color: #000000;
     opacity: 1;
     text-overflow: ellipsis;
