--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  padding: 156px 0 206px;
+  padding: 80px 0;
   background-color: $bg-pink;
   background-image: url("../img/bg-header@1x.jpg");
   background-size: cover;
