--- a/sass/blocks/partnership.scss
+++ b/sass/blocks/partnership.scss
@@ -1,6 +1,6 @@
 .partnership {
   height: 365px;
-  padding: 100px 0;
+  padding: 80px 0;
   box-sizing: border-box;
   background-color: #ffffff;
 }
@@ -39,7 +39,7 @@
     top: 10px;
     content: "";
     width: 8px;
-    height: 8px;    
+    height: 8px;
     border-radius: 50%;
     background-color: $green;
   }
