--- a/sass/blocks/task.scss
+++ b/sass/blocks/task.scss
@@ -1,6 +1,6 @@
 .task {
   min-height: 813px;
-  padding: 104px 0 109px;
+  padding: 97px 0;
   box-sizing: border-box;
 }
 
@@ -14,7 +14,7 @@
 .task__decor {
   position: absolute;
   left: -306px;
-  bottom: -109px;
+  bottom: -97px;
   width: 673px;
   height: 813px;
   background-image: url("../img/bg-books@1x.jpg");
